<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Fable</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Create your own story and share it with the world!</string>
    <string name="title_welcome_page">Welcome to Fable!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="logo_application">Logo Application</string>
    <string name="welcome_to_fable">Welcome to Fable</string>
    <string name="please_fill_the_form_below_to_continue" tools:ignore="UnusedResources">Please fill the form below to continue</string>
    <string name="don_t_have_an_account" tools:ignore="UnusedResources">Don\'t Have An Account?</string>
    <string name="checkbox_agree">By signing up, you agree to our Terms of Service and Privacy Policy</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="create">Create</string>
    <string name="description">description</string>
    <string name="story_icon">StoryIcon</string>
    <string name="story">Story</string>
    <string name="photo">Photo</string>
    <string name="avatar_user">avatar user</string>
    <string name="date">Date</string>
    <string name="title_profile">Profile\n</string>
    <string name="loading_info">We\'re gathering your content. This may take a moment.</string>
    <string name="loading_title">Please Wait…</string>
    <string name="nothing_found">Nothing Found</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="an_error_occurred_body">Something went wrong, please try again</string>
    <string name="from">from</string>
    <string name="author_name">Faradaii</string>
    <string name="guest">Guest</string>
    <string name="no_email">No Email</string>
    <string name="head_empty">There is nothing here yet</string>
    <string name="update_your_life">Update Your Life</string>
    <string name="update_your_life_body">Create your own life story in Fable!</string>
    <string name="preview_image">preview image</string>
    <string name="add_photo">Add Photo</string>
    <string name="upload_story">Upload Story</string>
    <string name="fab_add_story">FAB Add Story</string>
    <string name="title_activity_explore">ExploreActivity</string>
    <string name="add_location">Add Location</string>
    <string name="asking_permission" tools:ignore="UnusedResources">Asking permission</string>
    <string name="permission_needed" tools:ignore="UnusedResources">Permission Needed</string>
    <string name="permission_needed_body" tools:ignore="UnusedResources">To use this feature, you need to accept the following permissions</string>
    <string name="accept_permission" tools:ignore="UnusedResources">Accept Permission</string>
    <string name="try_again">Try Again</string>
    <string name="email_cannot_be_empty">Email cannot be empty</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="logging_you_in">Logging you in…</string>
    <string name="welcome_back">Welcome Back, %1$s !</string>
    <string name="logout_successfully">Logout Successfully</string>
    <string name="adding_you_to_our_world">Adding you to our world…</string>
    <string name="register_successfully_please_login">Register Successfully, Please Login</string>
    <string name="you_must_agree_to_the_terms_to_proceed">You must agree to the terms to proceed.</string>
    <string name="title_explore">Explore</string>
    <string name="getting_worldwide_stories">Getting worldwide stories…</string>
    <string name="successfully_get_worldwide_stories">Successfully get worldwide stories</string>
    <string name="viewing_s_story">Viewing %1$s\'s story…</string>
    <string name="style_parsing_failed">Style parsing failed!</string>
    <string name="cannot_find_style_map">Cannot find style map!</string>
    <string name="adding_image_canceled">Adding image canceled</string>
    <string name="please_add_a_photo_first">Please add a photo first</string>
    <string name="please_add_a_description">Please add a description</string>
    <string name="trying_to_share_your_story">Trying to share your story…</string>
    <string name="your_story_has_been_shared">Your story has been shared!</string>
    <string name="your_story_can_viewed_in_explore_page">Your story can viewed in Explore page</string>
    <string name="please_enable_gps">Please enable GPS!</string>
    <string name="failed_to_get_location">Failed to get location</string>
    <string name="now_you_re_able_to_use_this_feature">Now you\'re able to use this feature</string>
    <string name="oops_you_re_not_fully_able_to_use_this_feature">Oops, you\'re not fully able to use this feature</string>
</resources>