<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_logout_24"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />

</menu>